# fst-reader

./: Cargo.toml  Cross.toml
.github/workflows/: release.yml
docker/: Dockerfile.aarch64-unknown-linux-musl  Dockerfile.x86_64-unknown-linux-musl
examples/: README.md  fst-filter.rs
src/: io.rs  lib.rs  raw_reader.rs  reader.rs  types.rs
tests/: fst_roundtrip_tests.rs
